--- a/acm-website--master/index.html
+++ b/acm-website--master/index.html
@@ -10,6 +10,7 @@
 		<!-- Always force latest IE rendering engine or request Chrome Frame -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>ACM | NIT NAGPUR</title>
+        <link rel="icon" type="image/ico" href="acm_img.png">
 		<!-- Meta Description -->
         <meta name="description" content="Blue One Page Creative Template">
         <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html/5, css3, css3 animation">
