Updated Contact Section

--- a/acm-website--master/index.html
+++ b/acm-website--master/index.html
@@ -257,7 +257,29 @@ Outcome: Overwhelming participation from first year students in coding competiti
 					</div>
 				</div>
 			</section>
-			<!-- end Testimonial section -->
+            <!-- end Testimonial section -->
+            
+            <!-- Contact section -->
+			<section id="contact" >
+				<div class="container">
+					<div class="row">
+						
+						<div class="sec-title text-center wow animated fadeInDown">
+							<!-- <h2>Contact</h2> -->
+                            <!-- <p>Leave a Message</p> -->
+                            <div class="col-md-12 wow animated fadeInRight">
+                                <address class="contact-details">
+                                    <h2>Contact Us</h2>						
+                                    <p><i class="fa fa-pencil"></i>VNIT,South Ambazari Road, Abhyankar Nagar,<span>NAGPUR</span> <span>Maharashtra PIN-444001</span></p><br>
+                                    <p><i class="fa fa-phone"></i>+91 9876543210</p>
+                                    <p><i class="fa fa-envelope"></i>proclubvnit@gmail.com</p>
+                                </address>
+                            </div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end Contact section -->
 
 			<!--<section id="google-map">
 				<div id="map-canvas" class="wow animated fadeInUp"></div>
