--- a/ACM site/index.html
+++ b/ACM site/index.html
@@ -244,19 +244,24 @@ Outcome: Overwhelming participation from first year students in coding competiti
 									</div>
 								</div>
 								<div class="testimonial-item text-center">
-									<img src="img/ubuntu.png" alt="Events">
+									<img src="img/gitwa.png" alt="Events">
 									<div class="clearfix">
-										<span>Ubuntu​ ​ Installation​ ​ Workshop</span>
-										<p>Date : 24th September, 2017 sunday</p>
-</p>The Ubuntu Installation Workshop was organized for VNIT students Around 40​ people attended the workshop out of which 30-35 were from CSE branch, majorly from second year . Rest of them were from different branches. The ACM committee taught them how to install ubuntu​ in their own systems. With proper step by step procedure and proper explanation for each, the crowd could understand each and every thing. Finally they had ubuntu installed in their laptops. Some exceptions, because of their laptop specifications, had to be dealt separately.</p>
+										<span>Github and RegEx​​ Workshop</span>
+										<p>Date : 24th September, 2018 sunday</p>
+</p>The Github and RegEx Workshop was organized for VNIT students. Around 40​ people 
+attended the workshop out of which 30-35 were from CSE branch, majorly from second year .
+ Rest of them were from different branches. The ACM committee taught them procedure to use
+  version control system and introduced them to regular expressions.Assignments were given to
+  familiarize with Git commands and practice on <strong>regexone.com</strong>. With proper step by step procedure and proper 
+  explanation for each, the crowd could understand each and every thing. </p>
 									</div>
 								</div>
 								<div class="testimonial-item text-center">
 									<img src="img/google.jpg" alt="Events">
 									<div class="clearfix">
 										<span>GSoC ​ - ​ ​ Google​ ​ Summer​ ​ of​ ​ Code​ ​ Session</span>
-										<p>Date : 19/9/17,Tuesday.</p>
-</p>An Introductory session was organised for Google Summer of Code enthusiasts . The speakers for this program were Mr. Darshan Kadu (MEC) and MR. Janak Chaddha (EEE) who have cracked GSoC ‘17. They explained their projects briefly, gave information about their respective organizations via the means of a Powerpoint presentation. A google group has been created for GSoC enthusiasts. If anyone has any doubt regarding GSoC, they can post on the Google Group. Darshan or Janak would answer their queries over there. </p>
+										<p>Date : 19/1/19,Saturday.</p>
+</p>An Introductory session was organised for Google Summer of Code enthusiasts . The speakers for this program were Abhishek Gautam and Kranti Wadhai who had cracked GSoC ‘18. They explained the procedure for applying and how to interact with companies and all such information required to crack GSoC. They explained their projects briefly, gave information about their respective organizations via the means of a Powerpoint presentation.</p>
 									</div>
 								</div>
 							</div>
