--- a/ACM site/index.html
+++ b/ACM site/index.html
@@ -82,7 +82,7 @@
                         <li><a href="#about">about us</a></li>
                         <li><a href="#portfolio">GALLERY</a></li>
                         <li><a href="#testimonials">ACTIVITIES</a></li>
-                        <li><a href="./team.html" target="_blank">TEAM</a></li>
+                        <li><a href="./new 2.html" target="_blank">TEAM</a></li>
                         <li><a href="#contact">CONTACT US</a></li>
                     </ul>
                 </nav>
@@ -311,11 +311,11 @@ attended the workshop out of which 30-35 were from CSE branch, majorly from seco
 						</div>
 						<div class="footer-social">
 							<ul>
-								<li class="wow animated zoomIn"><a href="#"><i class="fab fa-facebook-f fa-3x"></i></a></li>
-								<li class="wow animated zoomIn" data-wow-delay="0.3s"><a href="#"><i class="fab fa-github fa-3x"></i></a></li>
-								<li class="wow animated zoomIn" data-wow-delay="0.6s"><a href="#"><i class="fa fa-envelope fa-3x"></i></a></li>
-								<li class="wow animated zoomIn" data-wow-delay="0.9s"><a href="#"><i class="fab fa-linkedin-in fa-3x"></i></a></li>
-                                <li class="wow animated zoomIn" data-wow-delay="0.9s"><a href="#"><i class="fab fa-blogger-b fa-3x"></i></a></li>
+								<li class="wow animated zoomIn"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f fa-3x"></i></a></li>
+								<li class="wow animated zoomIn" data-wow-delay="0.3s"><a href="https://github.com/proclubvnit" target="_blank"><i class="fab fa-github fa-3x"></i></a></li>
+								<li class="wow animated zoomIn" data-wow-delay="0.6s"><a href="#" target="_blank"><i class="fa fa-envelope fa-3x"></i></a></li>
+								<li class="wow animated zoomIn" data-wow-delay="0.9s"><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in fa-3x"></i></a></li>
+                                <li class="wow animated zoomIn" data-wow-delay="0.9s"><a href="https://www.blogger.com" target="_blank"><i class="fab fa-blogger-b fa-3x"></i></a></li>
 							</ul>
 						</div>
 
