--- a/ACM site/team.html
+++ b/ACM site/team.html
@@ -33,7 +33,7 @@
             <div class="row row-centered">
 
             <div class="sec-title text-center">
-                <h2 class="wow animated bounceInLeft">Team</h2>
+                <h2 class="wow animated bounceInLeft" style="color:white;font-family:italic;font-size:50px;">Team</h2>
                 <p class="wow animated bounceInRight"></p>
             </div>
 
@@ -44,8 +44,8 @@
                     <img src="img/member-1.jpg" alt="member" class="service-img">
                 </div>
                 <div class="service-content">
-                <h4>Name</h4>
-                <h5>presidentt</h5>
+                <h4 style="color:white;">Name</h4>
+                <h5 style="color:white;">presidentt</h5>
                 <div class="footer-social">
                     <ul>
                         <li class="wow animated zoomIn"><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
@@ -66,8 +66,8 @@
                     <img src="img/member-1.jpg" alt="member" class="service-img">
                 </div>
                 <div class="service-content">
-                <h4>Name</h4>
-                <h5>presidentt</h5>
+                <h4 style="color:white;">Name</h4>
+                <h5 style="color:white;">presidentt</h5>
                 <div class="footer-social">
                     <ul>
                         <li class="wow animated zoomIn"><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
@@ -88,8 +88,8 @@
                     <img src="img/member-1.jpg" alt="member" class="service-img">
                 </div>
                 <div class="service-content">
-                <h4>Name</h4>
-                <h5>presidentt</h5>
+                <h4 style="color:white;">Name</h4>
+                <h5 style="color:white;">presidentt</h5>
                 <div class="footer-social">
                     <ul>
                         <li class="wow animated zoomIn"><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
@@ -113,8 +113,8 @@
                     <img src="img/member-1.jpg" alt="member" class="service-img">
                 </div>
                 <div class="service-content">
-                <h4>Name</h4>
-                <h5>presidentt</h5>
+                <h4 style="color:white;">Name</h4>
+                <h5 style="color:white;">presidentt</h5>
                 <div class="footer-social">
                     <ul>
                         <li class="wow animated zoomIn"><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
@@ -135,8 +135,8 @@
                     <img src="img/member-1.jpg" alt="member" class="service-img">
                 </div>
                 <div class="service-content">
-                <h4>Name</h4>
-                <h5>presidentt</h5>
+                <h4 style="color:white;" >Name</h4>
+                <h5 style="color:white;">presidentt</h5>
                 <div class="footer-social">
                     <ul>
                         <li class="wow animated zoomIn"><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
@@ -157,8 +157,8 @@
                     <img src="img/member-1.jpg" alt="member" class="service-img">
                 </div>
                 <div class="service-content">
-                <h4>Name</h4>
-                <h5>presidentt</h5>
+                <h4 style="color:white;">Name</h4>
+                <h5 style="color:white;">presidentt</h5>
                 <div class="footer-social">
                     <ul>
                         <li class="wow animated zoomIn"><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
