Minor chnages in Recent section

--- a/ACM site/index.html
+++ b/ACM site/index.html
@@ -132,26 +132,17 @@
                     <div class="row">
    			      	<div class="col-md-6 wow animated fadeInLeft">
                          <div class="recent-works">
-							<h3>RECENT ACTIVITIES</h3>
+							<h3>RECENT ANOUNCEMENTS</h3>
 							<div id="works">
 								<div class="work-item">
-                                    <p class="recent-img" >CODEBLITZ - LUNIOUS: - The first contest hosted by the Programming Club on 23rd June, 2017. It was a 3 hour contest. The contest had overwhelming response with more than 100 participants.</p>
-                                    <div class="thumbnail">
-                                        <img src="./img/slider/banner.jpg" alt="...">
-                                    </div>
+                                    <p class="recent-item" >CODEBLITZ - LUNIOUS: - <br> The first contest hosted by the Programming Club on 23rd June, 2017. It was a 3 hour contest. The contest had overwhelming response with more than 100 participants.</p>
 								</div>
 						    	<div class="work-item">
-									<p class="recent-img">CODEBLITZ - DAWN OF DEBUGGING: - The programming contest was conducted on 20th August 2017. It was a 4hr long contest. Coders from all the years participated and showed off their programming skills. Winners were given attractive prizes and goodies!p>
-                                    <div class="thumbnail">
-                                        <img src="./img/slider/banner.jpg" alt="...">
-                                    </div>
-								</div>
+									<p class="recent-item">CODEBLITZ - DAWN OF DEBUGGING: - <br> The programming contest was conducted on 20th August 2017. It was a 4hr long contest. Coders from all the years participated and showed off their programming skills. Winners were given attractive prizes and goodies!p>
+        						</div>
 								<div class="work-item">
-                                    <p class="recent-img">CODE-A-THON : ACM ICPC PREPARATORY CONTEST: - It was conducted on 27th june 2016 and was a week long contest. This contest was specifically targeted towards ACM ICPC aspirants who had just entered the world of competitive programming.</p>
-                                    <div class="thumbnail">
-                                            <img src="./img/slider/banner.jpg" alt="...">
-                                    </div>
-								</div>
+                                    <p class="recent-item">CODE-A-THON : ACM ICPC PREPARATORY CONTEST: - <br> It was conducted on 27th june 2016 and was a week long contest. This contest was specifically targeted towards ACM ICPC aspirants who had just entered the world of competitive programming.</p>
+            					</div>
 							</div>
 						</div>
 					</div>
@@ -175,52 +166,52 @@
       </div>
       </section>
 
-      <section id="portfolio">
+    <section id="portfolio">
         <div class="container" id="portfolio-block">
           <div class="row">
             <div class="sec-title text-center white wow animated fadeInDown">
-							<h2>GALLERY</h2>
-						</div>
+				<h2>GALLERY</h2>
+			</div>
             <div style="padding:0px;padding-bottom:0px">
-    <div id="thumbnail-slider">
-        <div class="inner">
-            <ul>
-                <li>
-                    <a class="thumb" href="img/1.jpg"></a>
-                </li>
-                <li>
-                    <a class="thumb" href="img/2.jpg"></a>
-                </li>
-                <li>
-                    <a class="thumb" href="img/6.jpg"></a>
-                </li>
-                <li>
-                    <a class="thumb" href="img/3.jpg"></a>
-                </li>
-                <li>
-                    <a class="thumb" href="img/4.jpg"></a>
-                </li>
-                <li>
-                    <a class="thumb" href="img/5.jpg"></a>
-                </li>
-                <li>
-                    <a class="thumb" href="img/8.jpg"></a>
-                </li>
-                <li>
-                    <a class="thumb" href="img/9.jpg"></a>
-                </li>
-                <li>
-                    <a class="thumb" href="img/10.jpg"></a>
-                </li>
-                <li>
-                    <a class="thumb" href="img/11.jpg"></a>
-                </li>
-            </ul>
+                <div id="thumbnail-slider">
+                    <div class="inner">
+                        <ul>
+                            <li>
+                                <a class="thumb" href="img/1.jpg"></a>
+                            </li>
+                            <li>
+                                <a class="thumb" href="img/2.jpg"></a>
+                            </li>
+                            <li>
+                                <a class="thumb" href="img/6.jpg"></a>
+                            </li>
+                            <li>
+                                <a class="thumb" href="img/3.jpg"></a>
+                            </li>
+                            <li>
+                                <a class="thumb" href="img/4.jpg"></a>
+                            </li>
+                            <li>
+                                <a class="thumb" href="img/5.jpg"></a>
+                            </li>
+                            <li>
+                                <a class="thumb" href="img/8.jpg"></a>
+                            </li>
+                            <li>
+                                <a class="thumb" href="img/9.jpg"></a>
+                            </li>
+                            <li>
+                                <a class="thumb" href="img/10.jpg"></a>
+                            </li>
+                            <li>
+                                <a class="thumb" href="img/11.jpg"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-</div>
-</div>
 </section>
 
 			<!-- Testimonial section -->
