OWLButton displayset to none on MObile device

--- a/ACM site/index.html
+++ b/ACM site/index.html
@@ -82,7 +82,7 @@
                         <li><a href="#about">about us</a></li>
                         <li><a href="#portfolio">GALLERY</a></li>
                         <li><a href="#testimonials">ACTIVITIES</a></li>
-                        <li><a href="./new 2.html" target="_blank">TEAM</a></li>
+                        <li><a href="./team.html" target="_blank">TEAM</a></li>
                         <li><a href="#contact">CONTACT US</a></li>
                     </ul>
                 </nav>
